--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@vue/test-utils": "^2.1.0",
     "eslint": "^8.24.0",
     "jsdom": "^20.0.0",
+    "naive-ui": "^2.33.3",
     "pnpm": "^7.12.2",
     "taze": "^0.8.2",
     "typescript": "^4.8.4",
     "unocss": "^0.45.26",
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.7",
+    "vfonts": "^0.0.3",
     "vite": "^3.1.4",
     "vite-plugin-pages": "^0.26.0",
     "vitest": "^0.23.4",
