--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@iconify-json/carbon": "^1.1.8",
     "@types/node": "^18.7.23",
     "@unocss/reset": "^0.45.26",
+    "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "@vue/test-utils": "^2.1.0",
     "eslint": "^8.24.0",
