--- a/package.json
+++ b/package.json
@@ -1,44 +1,59 @@
 {
   "private": true,
-  "packageManager": "pnpm@7.12.0",
+  "packageManager": "pnpm@8.4.0",
   "scripts": {
     "build": "vite build",
-    "dev": "vite",
+    "dev": "vite --port 3000 --open",
     "lint": "eslint .",
     "typecheck": "vue-tsc --noEmit",
     "preview": "vite preview",
     "test": "vitest",
-    "up": "taze major -I"
+    "up": "taze major -I",
+    "postinstall": "npx simple-git-hooks"
   },
   "dependencies": {
-    "@vueuse/core": "^9.3.0",
-    "vue": "^3.2.40",
-    "vue-router": "^4.1.5"
+    "@vicons/ionicons5": "^0.12.0",
+    "@vueuse/core": "^10.1.2",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.27.0",
-    "@iconify-json/carbon": "^1.1.8",
-    "@types/node": "^18.7.23",
-    "@unocss/reset": "^0.45.26",
-    "@vicons/ionicons5": "^0.12.0",
-    "@vitejs/plugin-vue": "^3.1.0",
-    "@vue/test-utils": "^2.1.0",
-    "eslint": "^8.24.0",
-    "jsdom": "^20.0.0",
-    "naive-ui": "^2.33.3",
-    "pnpm": "^7.12.2",
-    "taze": "^0.8.2",
-    "typescript": "^4.8.4",
-    "unocss": "^0.45.26",
-    "unplugin-auto-import": "^0.11.2",
-    "unplugin-vue-components": "^0.22.7",
+    "@antfu/eslint-config": "^0.38.5",
+    "@iconify-json/carbon": "^1.1.16",
+    "@types/node": "^18.16.3",
+    "@unocss/eslint-config": "^0.51.8",
+    "@unocss/reset": "^0.51.8",
+    "@vitejs/plugin-vue": "^4.2.1",
+    "@vue-macros/volar": "^0.9.7",
+    "@vue/test-utils": "^2.3.2",
+    "eslint": "^8.39.0",
+    "jsdom": "^22.0.0",
+    "lint-staged": "^13.2.2",
+    "naive-ui": "^2.34.3",
+    "pnpm": "^8.4.0",
+    "simple-git-hooks": "^2.8.1",
+    "taze": "^0.10.1",
+    "typescript": "^5.0.4",
+    "unocss": "^0.51.8",
+    "unplugin-auto-import": "^0.15.3",
+    "unplugin-vue-components": "^0.24.1",
+    "unplugin-vue-macros": "^2.1.3",
     "vfonts": "^0.0.3",
-    "vite": "^3.1.4",
-    "vite-plugin-pages": "^0.26.0",
-    "vitest": "^0.23.4",
-    "vue-tsc": "^0.40.13"
+    "vite": "^4.3.4",
+    "vite-plugin-pages": "^0.29.0",
+    "vitest": "^0.31.0",
+    "vue-tsc": "^1.6.4"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   },
   "eslintConfig": {
-    "extends": "@antfu"
+    "extends": [
+      "@antfu",
+      "@unocss"
+    ]
   }
 }
